@@ -5,7 +5,7 @@
 '\" See the file "license.terms" for information on usage and redistribution
 '\" of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 '\" 
-'\" RCS: @(#) $Id: radiobutton.n,v 1.4 2000/08/25 06:58:32 ericm Exp $
+'\" RCS: @(#) $Id: radiobutton.n,v 1.5 2002/06/17 10:54:29 drh Exp $
 '\" 
 .so man.macros
 .TH radiobutton n 4.4 Tk "Tk Built-In Commands"
@@ -53,6 +53,11 @@ for the entire widget, in place of \fBbackground\fR or \fBactiveBackground\fR,
 whenever the widget is selected.
 If specified as an empty string then no special color is used for
 displaying when the widget is selected.
+.VS 8.4
+.OP \-offrelief offRelief OffRelief
+Specifies the relief for the checkbutton when the indicator is not drawn and
+the checkbutton is off.  The default value is "raised".
+.VE 8.4
 .VS 8.4
 .OP \-overrelief overRelief OverRelief
 Specifies an alternative relief for the radiobutton, to be used when the
